--- a/index.html
+++ b/index.html
@@ -2276,6 +2276,23 @@
         <a href="#caso-caroyense" class="case-anchor">La Caroyense</a>
         <a href="#caso-yale" class="case-anchor">Yale School</a>
       </div>
+      <section class="clients-section">
+  <div class="clients-title">CONFÍAN EN NEOPRODUX</div>
+  <div class="marquee-wrapper">
+    <div class="marquee">
+      <span class="marquee-item"><i class="fab fa-github"></i> GitHub</span>
+      <span class="marquee-item"><i class="fab fa-linkedin"></i> LinkedIn</span>
+      <span class="marquee-item"><i class="fas fa-palette"></i> Design Community</span>
+      <span class="marquee-item"><i class="fas fa-microchip"></i> Tech Industry</span>
+      <span class="marquee-item"><i class="fas fa-globe"></i> Global Portfolio</span>
+      <span class="marquee-item"><i class="fab fa-github"></i> GitHub</span>
+      <span class="marquee-item"><i class="fab fa-linkedin"></i> LinkedIn</span>
+      <span class="marquee-item"><i class="fas fa-palette"></i> Design Community</span>
+      <span class="marquee-item"><i class="fas fa-microchip"></i> Tech Industry</span>
+      <span class="marquee-item"><i class="fas fa-globe"></i> Global Portfolio</span>
+    </div>
+  </div>
+</section>
 
       <!-- Caso 1 -->
       <div id="caso-paseo" class="case-study animate-fade-in">
