--- a/index.html
+++ b/index.html
@@ -569,6 +569,37 @@
     .mini-testimonial-author strong {
       color: var(--dark-color);
     }
+    .clients-section { padding: 60px 40px; background: #f9f9f9; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; }
+    .clients-title { text-align: center; color: #999; font-size: 0.95rem; font-weight: 600; margin-bottom: 30px; letter-spacing: 0.5px; }
+    .marquee-wrapper { overflow: hidden; }
+    @keyframes marquee { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
+    .marquee { display: flex; gap: 40px; animation: marquee 40s linear infinite; }
+    .marquee-item { 
+      white-space: nowrap; 
+      color: #999; 
+      font-weight: 500; 
+      font-size: 0.95rem; 
+      display: flex; 
+      align-items: center; 
+      gap: 10px;
+      transition: color 0.3s ease;
+    }
+    .marquee-item i { 
+      font-size: 1.1rem; 
+      opacity: 0.8;
+      transition: opacity 0.3s ease;
+    }
+    .marquee-item:hover {
+      color: #000;
+    }
+    .marquee-item:hover i {
+      opacity: 1;
+    }
+
+    .stats { padding: 60px 40px; background: #fff; border-bottom: 1px solid #e5e5e5; }
+    .stats-grid { max-width: 1400px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; text-align: center; }
+    .stat-item h3 { font-size: 3.5rem; color: #000; margin-bottom: 12px; font-weight: 800; }
+    .stat-item p { color: #666; font-size: 1rem; font-weight: 500; }
 
     /* ==============================
        CTA DE REFUERZO
