Add certifications section to index.html
Added a new certifications section with a list of credentials and a link to verified credentials.

--- a/index.html
+++ b/index.html
@@ -658,6 +658,53 @@
         0 20px 40px rgba(255, 107, 53, 0.6),
         inset 0 1px 0 rgba(255, 255, 255, 0.3);
     }
+    .certifications-min {
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.certifications-min h2 {
+  font-size: 32px;
+  margin-bottom: 12px;
+}
+
+.cert-subtitle {
+  font-size: 16px;
+  opacity: 0.7;
+  max-width: 520px;
+  margin: 0 auto 40px;
+}
+
+.cert-list {
+  list-style: none;
+  padding: 0;
+  margin: 0 auto 32px;
+  max-width: 420px;
+}
+
+.cert-list li {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 10px 0;
+  font-size: 16px;
+}
+
+.cert-icon {
+  font-size: 14px;
+  opacity: 0.6;
+}
+
+.cert-link {
+  font-size: 14px;
+  opacity: 0.7;
+  text-decoration: none;
+}
+
+.cert-link:hover {
+  opacity: 1;
+}
+
 
     /* ==============================
        SECCIÓN "CÓMO TRABAJO"
@@ -2307,6 +2354,42 @@
         <a href="#caso-caroyense" class="case-anchor">La Caroyense</a>
         <a href="#caso-yale" class="case-anchor">Yale School</a>
       </div>
+      <section id="certificaciones" class="certifications-min">
+  <div class="container">
+    <h2>Certificaciones</h2>
+    <p class="cert-subtitle">
+      Formación validada en plataformas reconocidas. Credenciales verificables.
+    </p>
+
+    <ul class="cert-list">
+      <li>
+        <span class="cert-icon">✓</span>
+        UX Design Certification
+      </li>
+      <li>
+        <span class="cert-icon">✓</span>
+        UX Research & Usability
+      </li>
+      <li>
+        <span class="cert-icon">✓</span>
+        Data Analytics (Google)
+      </li>
+      <li>
+        <span class="cert-icon">✓</span>
+        Business Intelligence Foundations
+      </li>
+    </ul>
+
+    <a
+      href="https://www.credly.com/users/david-sebastian-diaz"
+      target="_blank"
+      class="cert-link"
+    >
+      Ver credenciales verificadas en Credly →
+    </a>
+  </div>
+</section>
+
       <section class="clients-section">
   <div class="clients-title">CONFÍAN EN NEOPRODUX</div>
   <div class="marquee-wrapper">
