--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -835,7 +835,7 @@
                     <ul class="footer-links">
                         <li><a href="mailto:david.diaz.uxdata@gmail.com"><i class="fas fa-envelope"></i> david.diaz.uxdata@gmail.com</a></li>
                         <li><a href="tel:+543525300076"><i class="fas fa-phone"></i> +543525300076</a></li>
-                        <li><a href="#"><i class="fas fa-map-marker-alt"></i> Ciudad Digital, DX 12345</a></li>
+                        <li><a href="#"><i class="fas fa-map-marker-alt"></i> Colonia Caroya, Córdoba. CP 5223</a></li>
                     </ul>
                 </div>
             </div>
