--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     /* Variables CSS para consistencia */
     :root {
-      --primary-color: #FF6B35;
+      --primary-color: #075a3b;
       --primary-dark: #d9572b;
       --secondary-color: #667eea;
       --dark-color: #1a1a1a;
@@ -116,6 +116,15 @@
       height: 100% !important;
       z-index: 0 !important;
     }
+    .hero-card {
+  background: rgba(255, 255, 255, 0.06); /* transparente pro */
+  backdrop-filter: blur(18px);
+  -webkit-backdrop-filter: blur(18px);
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  border-radius: 20px;
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.6);
+}
+
 
     /* Capa oscura superpuesta para mejor contraste del texto */
     .hero-overlay {
