--- a/index.html
+++ b/index.html
@@ -2809,7 +2809,7 @@
 
         <div class="case-visual">
           <img 
-            src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" 
+            src="Pisosclaro.png" 
             alt="Mockup Marmolería - Diseño web elegante para marmolería" 
             class="case-image"
             loading="lazy"
@@ -2869,7 +2869,7 @@
 
         <div class="case-visual">
           <img 
-            src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" 
+            src="Editorial.png" 
             alt="Mockup Editorial Digital - Diseño para lectura cómoda" 
             class="case-image"
             loading="lazy"
@@ -2929,7 +2929,7 @@
 
         <div class="case-visual">
           <img 
-            src="https://images.unsplash.com/photo-1546435770-a3e426bf472b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" 
+            src="tech.png" 
             alt="Mockup Productos Tech - E-commerce para tecnología" 
             class="case-image"
             loading="lazy"
