--- a/index.html
+++ b/index.html
@@ -1380,6 +1380,13 @@
       perspective: 1000px;
       border: 1px solid rgba(255, 255, 255, 0.1);
     }
+    .case-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top center;
+}
+
 
     .case-visual:hover {
       transform: 
