--- a/index.html
+++ b/index.html
@@ -3072,6 +3072,59 @@
     </div>
   </div>
 </div>
+  <div id="caso-constructora-rdb" class="case-study animate-fade-in">
+  <div class="case-content">
+    <span class="case-category">Construcción · UX/UI</span>
+    <h2 class="case-title">Constructora RDB – Rediseño Web Institucional</h2>
+
+    <div class="case-problem">
+      <h4>El desafío</h4>
+      <p>
+        Sitio institucional con estética tradicional, bajo impacto visual
+        y escasa conexión con redes sociales. Dificultad para comunicar
+        profesionalismo, proceso de trabajo y generar consultas digitales.
+      </p>
+    </div>
+
+    <div class="case-solution">
+      <h4>La propuesta</h4>
+      <p>
+        Rediseño web moderno y estratégico, enfocado en jerarquía visual,
+        mensaje claro, presencia humana y generación de contenido
+        reutilizable para redes sociales.
+      </p>
+    </div>
+
+    <div class="case-results">
+      <div class="result-item">
+        <div class="result-value">+Impacto</div>
+        <div class="result-label">Percepción de marca</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">+Claridad</div>
+        <div class="result-label">Mensaje y propuesta</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">+Interacción</div>
+        <div class="result-label">Potencial en redes</div>
+      </div>
+    </div>
+
+    <span class="case-note">
+      Trabajo en curso · Propuesta conceptual de rediseño UX/UI orientada a conversión y redes sociales.
+    </span>
+  </div>
+
+  <div class="case-visual">
+    <img src="rdb.png" alt="Rediseño web constructora RDB" class="case-image" loading="lazy">
+    <div class="case-overlay">
+      <p class="overlay-text">
+        Diseño institucional moderno pensado para vender y generar presencia digital
+      </p>
+    </div>
+  </div>
+</div>
+
   <!-- Caso Editorial -->
 <div id="caso-editorial" class="case-study animate-fade-in">
   <div class="case-content">
