--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="styles-portfoliobox-exact-replica.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
     
     <style>
         /* CSS inline para elementos específicos */
@@ -574,6 +574,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="script-portfoliobox-exact-replica.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
