--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="coverflow-preview">
                 <div class="preview-content">
                     <div class="preview-image">
-                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" 
+                        <img src="app para paseadores de perros (20)/Reserva · Confirmar cita-1.png" 
                              alt="PASEO App - Rediseño FinTech" 
                              id="previewImg">
                         <div class="preview-overlay"></div>
@@ -183,7 +183,7 @@
                 <div class="coverflow-track" id="coverflowTrack">
                     <!-- Slide 1 - PASEO App -->
                     <div class="coverflow-slide active" data-index="0" 
-                         data-img="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                         data-img="app para paseadores de perros (20)/mis mascotasPro - 23.png"
                          data-title="PASEO App"
                          data-description="Rediseño completo de app FinTech para paseadores de perros"
                          data-badge="FinTech"
@@ -193,7 +193,7 @@
                          data-link="#proyectos">
                         <div class="slide-content">
                             <div class="slide-image">
-                                <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                                <img src="app para paseadores de perros (20)/Cuenta cliente.png" 
                                      alt="PASEO App - FinTech" 
                                      loading="lazy">
                                 <div class="slide-overlay"></div>
@@ -207,7 +207,7 @@
                     
                     <!-- Slide 2 - Nexus Dashboard -->
                     <div class="coverflow-slide" data-index="1" 
-                         data-img="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                         data-img="dispatch - copia.png"
                          data-title="Nexus Dashboard"
                          data-description="Dashboard SaaS B2B para gestión logística avanzada"
                          data-badge="SaaS B2B"
@@ -231,7 +231,7 @@
                     
                     <!-- Slide 3 - E-commerce -->
                     <div class="coverflow-slide" data-index="2" 
-                         data-img="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                         data-img="Pisososcuro.png"
                          data-title="Tienda Online"
                          data-description="Rediseño e-commerce mobile-first con optimización de conversión"
                          data-badge="E-commerce"
@@ -241,7 +241,7 @@
                          data-link="#proyectos">
                         <div class="slide-content">
                             <div class="slide-image">
-                                <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                                <img src="Pisosclaro.png" 
                                      alt="E-commerce Mobile" 
                                      loading="lazy">
                                 <div class="slide-overlay"></div>
