--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" 
+                            <img src="alex.jpg" 
                                  alt="Alex Chen">
                         </div>
                         <div class="author-info">
