--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <article class="project-card">
                 <div class="project-visual">
                     <div class="project-image-container">
-                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="Desktop - 1paseo.png" 
                              alt="App FinTech para paseo de perros" 
                              loading="lazy">
                         <div class="project-badge">FinTech</div>
