--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     <div class="profile-card">
                         <div class="profile-avatar">
                             <!-- Avatar minimal (puedes reemplazar con tu foto) -->
-                            <div class="avatar-placeholder">
+                            <div class="avatar.png">
                                 <i class="fas fa-user"></i>
                             </div>
                         </div>
