--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section class="hero-section" id="hero" role="main" id="main-content">
         <!-- Banner de fondo en hero -->
         <div class="hero-banner">
-            <img src="BANNER (2).png" alt="Banner David Díaz - UX/UI Designer" class="banner-img">
+            <img src="BANNER.jpg" alt="Banner David Díaz - UX/UI Designer" class="banner-img">
         </div>
         
         <div class="hero-background"></div>
